--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -96,6 +96,8 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/InsecurePlatform.InsecurePlatform
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Vanish.Vanish
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ConventionalPlatform.ConventionalPlatform
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/RotatingPlatform.RotatingPlatform
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -668,6 +670,32 @@ MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 bUseUnsortedMenus=False
 bShowMobileStats=False
 
+[LandscapeEdit]
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200.000000
+bUseFlattenTarget=False
+FlattenTarget=0.000000
+RampWidth=2000.000000
+RampSideFalloff=0.400000
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
+
+[FoliageEdit]
+WindowPosition=-1,-1,284,400
+bFilterFoliage=False
+bShowPaletteItemDetails=True
+bShowPaletteItemTooltips=True
+ActivePaletteViewMode=0
+PaletteThumbnailScale=0.300000
+
+[DetailCustomWidgetExpansion]
+LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+
 [DetailCategories]
 InsecurePlatform_C.Tick=True
 InsecurePlatform_C.Rendering=True
@@ -713,14 +741,14 @@ InsecurePlatform_C.TransformCommon=True
 PreviewMaterial.PhysicalMaterial=True
 PreviewMaterial.Material=True
 PreviewMaterial.Translucency=True
-PreviewMaterial.TranslucencySelfShadowing=True
-PreviewMaterial.Usage=True
-PreviewMaterial.Mobile=True
-PreviewMaterial.ForwardShading=True
-PreviewMaterial.Tessellation=True
-PreviewMaterial.Group Sorting=True
-PreviewMaterial.PostProcessMaterial=True
-PreviewMaterial.Refraction=True
+PreviewMaterial.TranslucencySelfShadowing=False
+PreviewMaterial.Usage=False
+PreviewMaterial.Mobile=False
+PreviewMaterial.ForwardShading=False
+PreviewMaterial.Tessellation=False
+PreviewMaterial.Group Sorting=False
+PreviewMaterial.PostProcessMaterial=False
+PreviewMaterial.Refraction=False
 PreviewMaterial.Lightmass=True
 PreviewMaterial.Previewing=True
 PreviewMaterial.Thumbnail=True
@@ -731,12 +759,54 @@ MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
 MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
 MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+K2Node_VariableGet.DefaultValueCategory=True
+ConventionalPlatform_C.Tick=True
+ConventionalPlatform_C.Rendering=True
+ConventionalPlatform_C.Replication=True
+ConventionalPlatform_C.Input=True
+ConventionalPlatform_C.Actor=True
+MaterialExpressionDesaturation.MaterialExpressionDesaturation=True
+MaterialExpressionDesaturation.MaterialExpression=True
+MaterialExpressionReroute.MaterialExpression=True
+K2Node_BreakStruct.PinOptions=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+RotatingPlatform_C.Tick=True
+RotatingPlatform_C.Rendering=True
+RotatingPlatform_C.Replication=True
+RotatingPlatform_C.Input=True
+RotatingPlatform_C.Actor=True
+RotatingPlatform_C.TransformCommon=True
+RotatingPlatform_C.Default=True
+LandscapeEditorObject.New Landscape=True
+PaintBrushSettings.Brush=True
+PaintBrushSettings.View=True
+PaintModeSettings.VertexPainting=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/RotatingPlatform.RotatingPlatform;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/InsecurePlatform.InsecurePlatform;
 
 [AssetEditorToolkitTabLocation]
 /Engine/Tutorial/SubEditors/TutorialAssets/TutorialMaterial.TutorialMaterial=1
+/Game/Geometry/Meshes/1M_Cube.1M_Cube=1
+/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=1
+/Game/ThirdPersonBP/Blueprints/Rotate.Rotate=1
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
@@ -753,5 +823,8 @@ CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetAllActorsOfClass",
 CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_SpawnActorFromClass")
 CustomFavorites=(FieldName="/Script/Engine.PrimitiveComponent:GetMaterial",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
 CurrentProfile=CustomProfile
+
+[DetailCategoriesAdvanced]
+FloatProperty.Variable=False
 
 
