Bomb steps and conventional (mas o menos)

--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -98,6 +98,7 @@ OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/InsecurePlatform.InsecurePlatfor
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Vanish.Vanish
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ConventionalPlatform.ConventionalPlatform
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/RotatingPlatform.RotatingPlatform
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/BombSteps.BombSteps
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -797,8 +798,96 @@ PaintModeSettings.VertexPainting=True
 Actor.TransformCommon=True
 Actor.Rendering=True
 Actor.Actor=True
+ConventionalPlatform_C.TransformCommon=True
+ConventionalPlatform_C.Default=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+BombSteps_C.Tick=True
+BombSteps_C.Rendering=True
+BombSteps_C.Replication=True
+BombSteps_C.Input=True
+BombSteps_C.Actor=True
+InstancedStaticMeshComponent.Variable=True
+InstancedStaticMeshComponent.TransformCommon=True
+InstancedStaticMeshComponent.Sockets=True
+InstancedStaticMeshComponent.StaticMesh=True
+InstancedStaticMeshComponent.Instances=True
+InstancedStaticMeshComponent.InstancedStaticMeshComponent=True
+InstancedStaticMeshComponent.Culling=True
+InstancedStaticMeshComponent.Physics=True
+InstancedStaticMeshComponent.Collision=True
+InstancedStaticMeshComponent.Lighting=True
+InstancedStaticMeshComponent.Rendering=True
+InstancedStaticMeshComponent.Tags=True
+InstancedStaticMeshComponent.ComponentReplication=True
+InstancedStaticMeshComponent.Cooking=True
+InstancedStaticMeshComponent.Events=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_CallFunction.Graph=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+BombSteps_C.TransformCommon=True
+BombSteps_C.Default=True
+ThirdPersonCharacter_C.TransformCommon=True
+ThirdPersonCharacter_C.Animation=True
+ThirdPersonCharacter_C.Mesh=True
+ThirdPersonCharacter_C.Physics=True
+ThirdPersonCharacter_C.Clothing=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.ClothingSimulation=True
+ThirdPersonCharacter_C.Lighting=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.Tags=True
+ThirdPersonCharacter_C.Activation=True
+ThirdPersonCharacter_C.Cooking=True
+ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+ThirdPersonCharacter_C.Character Movement (General Settings)=True
+ThirdPersonCharacter_C.Character Movement: Walking=True
+ThirdPersonCharacter_C.Character Movement: Swimming=True
+ThirdPersonCharacter_C.Character Movement: Flying=True
+ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+ThirdPersonCharacter_C.Character Movement (Networking)=True
+ThirdPersonCharacter_C.Character Movement=True
+ThirdPersonCharacter_C.Character Movement: Avoidance=True
+ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+ThirdPersonCharacter_C.RootMotion=True
+ThirdPersonCharacter_C.NavMovement=True
+ThirdPersonCharacter_C.Velocity=True
+ThirdPersonCharacter_C.PlanarMovement=True
+ThirdPersonCharacter_C.MovementComponent=True
+ThirdPersonCharacter_C.Shape=True
+ThirdPersonCharacter_C.Navigation=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Input=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Materials=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/BombSteps.BombSteps;
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ConventionalPlatform.ConventionalPlatform;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/RotatingPlatform.RotatingPlatform;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/InsecurePlatform.InsecurePlatform;
 
@@ -807,6 +896,8 @@ RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/InsecurePlatform.InsecurePlatform;
 /Game/Geometry/Meshes/1M_Cube.1M_Cube=1
 /Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=1
 /Game/ThirdPersonBP/Blueprints/Rotate.Rotate=1
+/Game/ThirdPersonBP/Blueprints/RotatingPlatform.RotatingPlatform=1
+/Game/ThirdPersonBP/Blueprints/BombSteps.BombSteps=1
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
@@ -826,5 +917,8 @@ CurrentProfile=CustomProfile
 
 [DetailCategoriesAdvanced]
 FloatProperty.Variable=False
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
 
