Insecure platform finished

--- a/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -97,8 +97,6 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/InsecurePlatform.InsecurePlatform
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Vanish.Vanish
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ConventionalPlatform.ConventionalPlatform
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/RotatingPlatform.RotatingPlatform
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/BombSteps.BombSteps
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -742,7 +740,7 @@ InsecurePlatform_C.TransformCommon=True
 PreviewMaterial.PhysicalMaterial=True
 PreviewMaterial.Material=True
 PreviewMaterial.Translucency=True
-PreviewMaterial.TranslucencySelfShadowing=False
+PreviewMaterial.TranslucencySelfShadowing=True
 PreviewMaterial.Usage=False
 PreviewMaterial.Mobile=False
 PreviewMaterial.ForwardShading=False
@@ -884,6 +882,8 @@ ThirdPersonCharacter_C.Pawn=True
 ThirdPersonCharacter_C.Input=True
 ThirdPersonCharacter_C.Actor=True
 ThirdPersonCharacter_C.Materials=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/BombSteps.BombSteps;
